--- a/main.css
+++ b/main.css
@@ -1,14 +1,58 @@
-.play-button {
+@import url('https://fonts.googleapis.com/css?family=Audiowide');
+
+
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    font-family: 'Audiowide', cursive;
+}
+
+#wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.controls {
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.button {
     width: 200px;
     height: 40px;
     background: red;
     color: white;
-    border: 2px solid white;
+    font-size: 1.3em;
+    border: 1px solid white;
     border-radius: 15px;
+    margin: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.425);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
+.button:hover {
+    transform: scale(1.03);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.35);
+
+
+}
+
+#dice-face {
+    border-radius: 15px;
+    background: whitesmoke;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.425);
+}
+
+
 
 .scoreboard {
     width: 80vw;
@@ -28,4 +72,16 @@
 #scoreboard-inner {
     display: grid;
     grid-template-columns: repeat(3, 1fr);  
+}
+
+#message-box {
+    width: 85vw;
+    height: 20vh;
+    border-radius: 15px;
+    background: whitesmoke;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.425);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
