--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .controls {
@@ -24,6 +24,21 @@ body {
 
 }
 
+#input {
+    height: 1.3em;
+    width: 40%;
+    border-radius: 10px;
+    font-size: 1em;
+    font-family: 'Audiowide', cursive;
+    box-shadow: 0px 0px 5px inset rgba(0, 0, 0, 0.4);
+    padding-left: 10px;
+}
+
+#input:focus { 
+    box-shadow: 1px 1px 3px inset rgba(0, 0, 0, 0.2);
+}
+
+
 .button {
     width: 200px;
     height: 40px;
@@ -31,19 +46,22 @@ body {
     color: white;
     font-size: 1.3em;
     border: 1px solid white;
-    border-radius: 15px;
+    border-radius: 10px;
     margin: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.425);
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 .button:hover {
     transform: scale(1.03);
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.35);
+}
 
-
+.button:active {
+    transform: scale(0.97);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.35);
 }
 
 #dice-face {
@@ -52,7 +70,13 @@ body {
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.425);
 }
 
+#play {
+    display: inline;
+}
 
+#roll {
+    display: inline;
+}
 
 .scoreboard {
     width: 80vw;
@@ -69,6 +93,17 @@ body {
 
 }
 
+.score {
+    font-size: 4vw;
+}
+
+#score-number {
+    min-width: 25vw;
+    font-size: 15vw;
+
+
+}
+
 #scoreboard-inner {
     display: grid;
     grid-template-columns: repeat(3, 1fr);  
@@ -76,12 +111,47 @@ body {
 
 #message-box {
     width: 85vw;
-    height: 20vh;
+    min-height: 20vh;
     border-radius: 15px;
     background: whitesmoke;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.425);
     display: flex;
+    text-align: center;
     flex-direction: column;
+    flex-flow: wrap;
     align-items: center;
     justify-content: center;
+    font-size: 2em;
+}
+
+
+body:not(.user-is-tabbing) button:focus,
+body:not(.user-is-tabbing) input:focus,
+body:not(.user-is-tabbing) select:focus,
+body:not(.user-is-tabbing) textarea:focus {
+  outline: none;
+}
+
+#instructions {
+    font-size: 1.2rem;
+    display: none;
+    min-width: 70%;
+}
+
+#instructions h3 {
+    margin: 0;
+}
+#instructions li {
+    text-align: left;
+}
+#message-box-inner {
+    display: inline;
+}
+
+.play-area {
+    min-width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
