--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ body {
 }
 
 #input {
+    display: none;
     height: 1.3em;
     width: 40%;
     border-radius: 10px;
@@ -32,6 +33,7 @@ body {
     font-family: 'Audiowide', cursive;
     box-shadow: 0px 0px 5px inset rgba(0, 0, 0, 0.4);
     padding-left: 10px;
+    margin: 10px;
 }
 
 #input:focus { 
@@ -40,8 +42,8 @@ body {
 
 
 .button {
-    width: 200px;
-    height: 40px;
+    width: 250px;
+    height: 50px;
     background: red;
     color: white;
     font-size: 1.3em;
@@ -54,6 +56,7 @@ body {
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.425);
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
+
 .button:hover {
     transform: scale(1.03);
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.35);
@@ -61,7 +64,7 @@ body {
 
 .button:active {
     transform: scale(0.97);
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.35);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
 #dice-face {
@@ -75,7 +78,11 @@ body {
 }
 
 #roll {
-    display: inline;
+    display: none;
+}
+
+#submit {
+    display: none;
 }
 
 .scoreboard {
